--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
     <!-- End Google Tag Manager -->
   </head>
   
-  <body id="top" class="dark-theme">
+  <body id="top" class="">
     <!-- Google Tag Manager (noscript) -->
     <noscript>
       <iframe src="https://www.googletagmanager.com/ns.html?id=GTM-5Q296X" 
