--- a/index.html
+++ b/index.html
@@ -92,12 +92,12 @@
             
             <div class="about-text">
               <p>
-                Hello, I'm Leigh, an experienced Interaction Designer from Nottingham with a passion for creating intuitive and engaging digital experiences. My design philosophy centres around user-centred design, where user needs and goals are at the forefront of the design process.
+                Hi, I’m Leigh — an experienced Interaction Designer based in Nottingham, passionate about crafting intuitive, accessible digital experiences that put real user needs at the heart of every decision.
               </p>
               <p>
-                I have worked as a UX designer, front-end developer, and have experience across many areas of digital marketing.
+               My background spans UX design, front-end development, and digital marketing, giving me a well-rounded perspective on how design, content, and technology come together to create meaningful products.
               </p>
-              <p>When I'm not designing, I might be:</p>
+              <p>When I’m not designing, you’ll likely find me:</p>
               <ul class="interests-list">
                 <li>
                   <a href="https://youtube.com/laweffect" 
